laser_to_pointcloud added for simulation

--- a/ros/hokuyo_ws/src/hokuyo_go/CMakeLists.txt
+++ b/ros/hokuyo_ws/src/hokuyo_go/CMakeLists.txt
@@ -11,7 +11,12 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  pcl_conversions
+  sensor_msgs
 )
+add_executable(laser_to_pointcloud src/laser_to_pointcloud.cpp)
+target_link_libraries(laser_to_pointcloud ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+install(TARGETS laser_to_pointcloud DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
