ROS-Arduino COM added

--- a/ros/hokuyo_ws/src/hokuyo_go/CMakeLists.txt
+++ b/ros/hokuyo_ws/src/hokuyo_go/CMakeLists.txt
@@ -214,6 +214,9 @@ add_executable(vel_publisher src/vel_publisher.cpp)
 target_link_libraries(vel_publisher ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 install(TARGETS vel_publisher DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
+add_executable(deneme src/deneme.cpp)
+target_link_libraries(deneme ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+install(TARGETS deneme DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 #add_executable(state_detect src/state_detect.cpp)
 #target_link_libraries(state_detect ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 #install(TARGETS state_detect DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
